--- a/rush.yaml
+++ b/rush.yaml
@@ -70673,7 +70673,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or your Graveyard face-up to your field. Switch its original ATK and DEF until the end of this turn.
+    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or your Graveyard face-up to your field. Switch its original ATK/DEF until the end of this turn.
   de:
   es:
   fr:
@@ -84037,7 +84037,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 2 Plant Type Normal Monsters with an equal or lower Level than the Level of 1 face-up Plant Type Normal Monster on your field, from your Graveyard face-up to your field. Then, if you have a face-up Level 5 monster on your field, you can destroy all face-up Level 7 or higher Normal Monsters on your opponent's field.
+    Special Summon up to 2 Plant Type Normal Monsters with an equal or lower Level than the Level of 1 face-up Plant Type Normal Monster on your field from your Graveyard face-up to your field. Then, if you have a face-up Level 5 monster on your field, you can destroy all face-up Level 7 or higher Normal Monsters on your opponent's field.
   de:
   es:
   fr:
@@ -94800,7 +94800,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Normal Monster with the same name as a face-up monster on your field, from your Graveyard face-up to your field.
+    Special Summon 1 Normal Monster with the same name as a face-up monster on your field from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -99378,7 +99378,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and you have no other monsters on your field.
+    You have 10 or more cards in your Deck and have no other monsters on your field.
   de:
   es:
   fr:
@@ -99626,7 +99626,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you returned 3 or more Maximum Monsters to your Deck to meet the requirement, you can destroy all cards on your opponent's field.
+    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you placed 3 or more Maximum Monsters to meet the requirement, you can destroy all cards on your opponent's field.
   de:
   es:
   fr:
@@ -108853,7 +108853,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attacking monster loses ATK equal to [the attacking monster's Level] x 600 until the end of this turn.
+    The attacking monster loses ATK equal to [the Level of the attacking monster] x 600 until the end of this turn.
   de:
   es:
   fr:
@@ -114414,7 +114414,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Then, if the attack target's Level is higher than the attacking monster's, you can destroy the attacking monster.
+    Negate the attack. Then, if the Level of the attack target is higher than the Level of the attacking monster, you can destroy the attacking monster.
   de:
   es:
   fr:
