--- a/data/rush/18907.yaml
+++ b/data/rush/18907.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Increase the Level of 1 face-up Level 6 or lower monster on your field with 1000 DEF by 2 until the end of this turn.
+    Increase the Level of 1 face-up Level 6 or lower monster with 1000 DEF on your field by 2 until the end of this turn.
   de:
   es:
   fr:
