--- a/data/rush/19554.yaml
+++ b/data/rush/19554.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 3 face-up Spellcaster Type monsters with 0 original ATK on your field gain ATK equal to [the number of monsters on your opponent's field] x 1400 until the end of this turn. Then, you can Set 1 "Recovery Force" from your Graveyard in your Spell & Trap Zone.
+    Up to 3 face-up Spellcaster Type monsters on your field with 0 original ATK gain ATK equal to [the number of monsters on your opponent's field] x 1400 until the end of this turn. Then, you can Set 1 "Recovery Force" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
