--- a/data/cards/01353770.yaml
+++ b/data/cards/01353770.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: VASM-EN056
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: PP02-DE020
     set_name: Premium Pack 2 (TCG)
@@ -93,6 +97,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: VASM-DE056
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: PP02-FR020
     set_name: Premium Pack 2 (TCG)
@@ -120,6 +128,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: VASM-FR056
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: PP02-IT020
     set_name: Premium Pack 2 (TCG)
@@ -147,6 +159,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: VASM-IT056
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: BP03-PT154
     set_name: 'Battle Pack 3: Monster League'
@@ -161,6 +177,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-PT056
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: PP11-JP008
     set_name: Premium Pack 11
