--- a/data/cards/23693634.yaml
+++ b/data/cards/23693634.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-EN054
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: 5DS1-DE043
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -101,6 +105,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-DE054
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: 5DS1-FR043
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -122,6 +130,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-FR054
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: 5DS1-IT043
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -143,6 +155,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-IT054
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: PGLD-PT043
     set_name: Premium Gold
@@ -156,6 +172,10 @@ sets:
     set_name: OTS Tournament Pack 10
     rarities:
     - Common
+  - set_number: VASM-PT054
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: YSD3-JP043
     set_name: Starter Deck 2008
