--- a/data/cards/01966438.yaml
+++ b/data/cards/01966438.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Super Rare
+  - set_number: VASM-EN051
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: IGAS-DE019
     set_name: Ignition Assault
     rarities:
     - Super Rare
+  - set_number: VASM-DE051
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: IGAS-FR019
     set_name: Ignition Assault
     rarities:
     - Super Rare
+  - set_number: VASM-FR051
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: IGAS-IT019
     set_name: Ignition Assault
     rarities:
     - Super Rare
+  - set_number: VASM-IT051
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: IGAS-PT019
     set_name: Ignition Assault
     rarities:
     - Super Rare
+  - set_number: VASM-PT051
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: IGAS-JP019
     set_name: Ignition Assault
