--- a/data/cards/04545683.yaml
+++ b/data/cards/04545683.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-EN050
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   - set_number: JUMP-EN052
     set_name: Shonen Jump Vol. 9, Issue 6 promotional card
     rarities:
@@ -72,6 +76,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-DE050
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: LC5D-FR162
     set_name: Legendary Collection 5D's Mega Pack
@@ -81,6 +89,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-FR050
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: LC5D-IT162
     set_name: Legendary Collection 5D's Mega Pack
@@ -90,6 +102,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-IT050
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: LC5D-PT162
     set_name: Legendary Collection 5D's Mega Pack
@@ -99,6 +115,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-PT050
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: VJMP-JP054
     set_name: V Jump October 2010 promotional card
