--- a/data/cards/09995766.yaml
+++ b/data/cards/09995766.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: VASM-EN058
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: ANPR-DE067
     set_name: Ancient Prophecy
@@ -59,6 +63,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: VASM-DE058
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: ANPR-FR067
     set_name: Ancient Prophecy
@@ -68,6 +76,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: VASM-FR058
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: ANPR-IT067
     set_name: Ancient Prophecy
@@ -77,11 +89,19 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: VASM-IT058
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: SDSA-PT038
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: VASM-PT058
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: ANPR-JP067
     set_name: Ancient Prophecy
