--- a/data/cards/26914168.yaml
+++ b/data/cards/26914168.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: VASM-EN047
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: LIOV-DE022
     set_name: Lightning Overdrive
@@ -63,6 +67,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: VASM-DE047
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: LIOV-FR022
     set_name: Lightning Overdrive
@@ -72,6 +80,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: VASM-FR047
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: LIOV-IT022
     set_name: Lightning Overdrive
@@ -81,6 +93,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: VASM-IT047
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: LIOV-PT022
     set_name: Lightning Overdrive
@@ -90,6 +106,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: VASM-PT047
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: LIOV-JP022
     set_name: Lightning Overdrive
