--- a/data/cards/33212663.yaml
+++ b/data/cards/33212663.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: VASM-EN053
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: ETCO-DE009
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: VASM-DE053
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: ETCO-FR009
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: VASM-FR053
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: ETCO-IT009
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: VASM-IT053
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: ETCO-PT009
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: VASM-PT053
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: ETCO-JP009
     set_name: Eternity Code
