--- a/data/cards/37742478.yaml
+++ b/data/cards/37742478.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-EN046
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   - set_number: DT07-EN005
     set_name: Duel Terminal 7a
     rarities:
@@ -140,6 +144,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-DE046
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: LODT-FR001
     set_name: Light of Destruction
@@ -186,6 +194,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-FR046
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: LODT-IT001
     set_name: Light of Destruction
@@ -232,6 +244,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-IT046
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: SDBE-PT017
     set_name: Saga of Blue-Eyes White Dragon Structure Deck
@@ -265,6 +281,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-PT046
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: LODT-JP001
     set_name: Light of Destruction
