--- a/data/cards/59509952.yaml
+++ b/data/cards/59509952.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-EN048
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: SOVR-DE096
     set_name: Stardust Overdrive
@@ -77,6 +81,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-DE048
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: SOVR-FR096
     set_name: Stardust Overdrive
@@ -94,6 +102,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-FR048
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: SOVR-IT096
     set_name: Stardust Overdrive
@@ -111,6 +123,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-IT048
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: DESO-PT050
     set_name: Destiny Soldiers
@@ -120,6 +136,10 @@ sets:
     set_name: 'Structure Deck: Wave of Light'
     rarities:
     - Common
+  - set_number: VASM-PT048
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: VJMP-JP038
     set_name: V Jump March 2009 promotional card
