--- a/data/cards/62411042.yaml
+++ b/data/cards/62411042.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: VASM-EN052
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: IGAS-DE027
     set_name: Ignition Assault
@@ -62,6 +66,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: VASM-DE052
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: IGAS-FR027
     set_name: Ignition Assault
@@ -71,6 +79,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: VASM-FR052
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: IGAS-IT027
     set_name: Ignition Assault
@@ -80,6 +92,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: VASM-IT052
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: IGAS-PT027
     set_name: Ignition Assault
@@ -89,6 +105,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: VASM-PT052
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: IGAS-JP027
     set_name: Ignition Assault
