--- a/data/cards/68140974.yaml
+++ b/data/cards/68140974.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-EN049
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   - set_number: JUMP-EN053
     set_name: Shonen Jump Vol. 9, Issue 8 promotional card
     rarities:
@@ -82,6 +86,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-DE049
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: SP13-FR047
     set_name: Star Pack 2013
@@ -96,6 +104,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-FR049
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: SP13-IT047
     set_name: Star Pack 2013
@@ -110,6 +122,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-IT049
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: SP13-PT047
     set_name: Star Pack 2013
@@ -124,6 +140,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: VASM-PT049
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: WJMP-JP015
     set_name: Weekly Shōnen Jump 2010, Issue 36–37 promotional card
