--- a/data/cards/81439173.yaml
+++ b/data/cards/81439173.yaml
@@ -136,6 +136,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: VASM-EN055
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   - set_number: DT05-EN042
     set_name: Duel Terminal 5a
     rarities:
@@ -230,6 +234,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: VASM-DE055
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: SDRL-FR020
     set_name: Rise of the Dragon Lords Structure Deck
@@ -320,6 +328,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: VASM-FR055
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: SDRL-IT020
     set_name: Rise of the Dragon Lords Structure Deck
@@ -410,6 +422,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: VASM-IT055
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: LCJW-PT070
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -479,6 +495,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: VASM-PT055
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: SJ2-029
     set_name: 'Structure Deck: Joey Volume 2'
