--- a/data/cards/85888377.yaml
+++ b/data/cards/85888377.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+  - set_number: VASM-EN060
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: PHHY-DE097
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+  - set_number: VASM-DE060
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: PHHY-FR097
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+  - set_number: VASM-FR060
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: PHHY-IT097
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+  - set_number: VASM-IT060
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: PHHY-PT097
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+  - set_number: VASM-PT060
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: VP22-JP003
     set_name: Pharaonic Legend Pack
