--- a/data/cards/97077563.yaml
+++ b/data/cards/97077563.yaml
@@ -217,6 +217,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: VASM-EN059
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   - set_number: PSV-012
     set_name: Pharaoh's Servant
     rarities:
@@ -421,6 +425,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: VASM-DE059
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: SDP-F012
     set_name: Pharaoh's Servant
@@ -597,6 +605,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: VASM-FR059
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: SDF-I012
     set_name: Pharaoh's Servant
@@ -773,6 +785,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: VASM-IT059
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: SD1-PT021
     set_name: "Structure Deck: Dragon's Roar"
@@ -896,6 +912,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: VASM-PT059
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: CA-12
     set_name: Curse of Anubis (set)
