--- a/data/cards/03048768.yaml
+++ b/data/cards/03048768.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is in your hand: You can discard 1 other card; take 1 "Dimonno Vaalmonica" from your Deck, and place this card and that card in your Pendulum Zones. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Vaalmonica" Normal Spell/Trap from your GY; apply whichever effect on that card includes gaining LP. You can only use each effect of "Angello Vaalmonica" once per turn.
+    If this card is in your hand: You can discard 1 other card; take 1 "Dimonno Valmonica" from your Deck, and place this card and that card in your Pendulum Zones. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Valmonica" Normal Spell/Trap from your GY; apply whichever effect on that card includes gaining LP. You can only use each effect of "Angello Vaalmonica" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ def: 2100
 pendulum_scale: 3
 pendulum_effect:
   en: |-
-    Each time you gain LP while you control a Fiend Monster Card in your other Pendulum Zone, place 1 Resonance Counter on this card. Once per turn, when an opponent's monster declares an attack, you can: Immediately after this effect resolves, Link Summon 1 "Vaalmonica" Link Monster.
+    Each time you gain LP while you control a Fiend Monster Card in your other Pendulum Zone, place 1 Resonance Counter on this card. Once per turn, when an opponent's monster declares an attack, you can: Immediately after this effect resolves, Link Summon 1 "Valmonica" Link Monster.
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ pendulum_effect:
   zh-TW:
   zh-CN:
 series:
-- Vaalmonica
+- Valmonica
 images:
 - index: 1
-  image: AngelloVaalmonica-DBVS-JP-C.png
+  image: AngelloValmonica-DBVS-JP-C.png
 sets:
   en:
   - set_number: VASM-EN031
