--- a/data/cards/31971040.yaml
+++ b/data/cards/31971040.yaml
@@ -18,7 +18,7 @@ text:
     Apply 1 of these effects. You must control a "Vaalmonica" Monster Card to activate and to resolve this effect. If you control a "Vaalmonica" Link Monster, you can apply both effects in sequence.
     ● Gain 500 LP, also for the rest of this turn, your opponent cannot target "Vaalmonica" Monster Cards you control with card effects.
     ● Take 500 damage, then you can negate the effects of 1 Effect Monster your opponent controls, until the end of this turn.
-    You can only activate 1 "Vaalmonica Followed Rhythm" per turn.
+    You can only activate 1 "Vaalmonica Chosen Melody" per turn.
   de:
   es:
   fr:
