--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -48,6 +48,7 @@ images:
   image: MagiciansofBondsandUnity-AGOV-EN-QCScR-1E.png
 - index: 3
   image: MagiciansofBondsandUnity-PHNI-JP-QCScR.png
+  illustration: MagiciansofBondsandUnity-OW-3.png
 sets:
   en:
   - set_number: DUNE-EN000
