--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -29,9 +29,9 @@
 - set_abbreviation: PHNI
   fake_password_range:
     - 101203000
-# Pendulum Witch
-- yugipedia: 1012672
-  fake_password: 100200244
+# Surgical Striker - S.P.E.C.T.R.A.
+- yugipedia: 1022010
+  fake_password: 100200245
 # Terminal World
 - set_abbreviation: TW01
   fake_password_range: 100301000
