--- a/data/cards/16480084.yaml
+++ b/data/cards/16480084.yaml
@@ -8,7 +8,7 @@ name:
   it: Evolsauro Pelta
   pt: Evolssauro Pelta
   ja: エヴォルダー・ペルタ
-  ja_romaji: Evoldā Peruta
+  ja_romaji: Evorudā Peruta
   ko: 에볼더 펠타
   ko_rr:
   zh-TW:
