--- a/data/cards/84206435.yaml
+++ b/data/cards/84206435.yaml
@@ -41,6 +41,10 @@ series:
 images:
 - index: 1
   image: MedallionoftheIceBarrier-HAC1-EN-C-1E.png
+  illustration: MedallionoftheIceBarrier-MADU-EN-VG-artwork.png
+- index: 2
+  image: MedallionoftheIceBarrier-TW01-JP-OP.png
+  illustration: MedallionoftheIceBarrier-OW.png
 sets:
   en:
   - set_number: STBL-EN054
@@ -116,6 +120,11 @@ sets:
   - set_number: SD40-JP029
     set_name: 'Structure Deck: Ice Barrier of the Frozen Prison'
     rarities:
+    - Normal Parallel Rare
+  - set_number: TW01-JP042
+    set_name: Terminal World (set)
+    rarities:
+    - Common
     - Normal Parallel Rare
   ko:
   - set_number: STBL-KR054
