--- a/data/cards/yugipedia1025429.yaml
+++ b/data/cards/yugipedia1025429.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>霊<rt>れい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby> レイラウタリ
-  ja_romaji:
+  ja_romaji: Seireijūki Reirautari
   ko:
   ko_rr:
   zh-TW:
