--- a/data/cards/yugipedia1025428.yaml
+++ b/data/cards/yugipedia1025428.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>霊<rt>れい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby> ノチウドラゴ
-  ja_romaji:
+  ja_romaji: Seireijūki Nochiudorago
   ko:
   ko_rr:
   zh-TW:
