--- a/data/cards/yugipedia1025430.yaml
+++ b/data/cards/yugipedia1025430.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 霊獣の継聖
-  ja_romaji:
+  ja: <ruby>霊<rt>れい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>の<ruby>継<rt>けい</rt></ruby><ruby>聖<rt>しょう</rt></ruby>
+  ja_romaji: Reijū no Keishō
   ko:
   ko_rr:
   zh-TW:
