--- a/data/cards/69452756.yaml
+++ b/data/cards/69452756.yaml
@@ -36,6 +36,8 @@ text:
     此卡名的效果在同一连锁上仅可以发动1次。①：支付1000LP，可以场上的1张表侧表示的魔法・陷阱卡为对象发动此效果。将该卡破坏。
 card_type: Trap
 property: Continuous
+series:
+- Risebell
 images:
 - index: 1
   image: UnendingNightmare-SGX3-EN-C-1E.png
