--- a/data/cards/72648810.yaml
+++ b/data/cards/72648810.yaml
@@ -36,6 +36,8 @@ text:
     ①：对手发动灵摆怪兽的效果或已存在于灵摆区域的卡的效果时可以发动。将该发动无效并除外。
 card_type: Trap
 property: Counter
+series:
+- Risebell
 images:
 - index: 1
   image: UnwaveringBond-PEVO-EN-SR-1E.png
