--- a/data/cards/31222701.yaml
+++ b/data/cards/31222701.yaml
@@ -76,6 +76,8 @@ text:
     ●4张：可从牌组将1张"摇摆的视线"加入手牌。
 card_type: Spell
 property: Quick-Play
+series:
+- Risebell
 images:
 - index: 1
   image: WaveringEyes-ANGU-EN-R-1E.png
