--- a/data/rush/yugipedia1020976.yaml
+++ b/data/rush/yugipedia1020976.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Effect Monster with 100 or more original ATK on your opponent's field loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate its Continuous Effects until the end of this turn.
+    1 face-up Effect Monster on your opponent's field with 100 or more original ATK loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate its Continuous Effects until the end of this turn.
   de:
   es:
   fr:
