--- a/rush.yaml
+++ b/rush.yaml
@@ -119704,7 +119704,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up EARTH Attribute and DARK Attribute Beast-Warrior Type monsters with 1600 or more original ATK on the field gain 400 ATK/DEF, and cannot be destroyed by card effects.
+    While this card is face-up in the Field Zone, face-up EARTH Attribute and DARK Attribute Beast-Warrior Type monsters on the field with 1600 or more original ATK gain 400 ATK/DEF, and cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -121075,7 +121075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent can only declare an attack once this turn. Then, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster whose original ATK is 3000 on your opponent's field.
+    Your opponent can only declare an attack once this turn. Then, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster on your opponent's field with 3000 original ATK.
   de:
   es:
   fr:
@@ -121499,7 +121499,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Effect Monster with 100 or more original ATK on your opponent's field loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate its Continuous Effects until the end of this turn.
+    1 face-up Effect Monster on your opponent's field with 100 or more original ATK loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate its Continuous Effects until the end of this turn.
   de:
   es:
   fr:
