--- a/data/cards/11969228.yaml
+++ b/data/cards/11969228.yaml
@@ -54,6 +54,7 @@ atk: 1200
 materials: 2 Dragon and/or Winged Beast monsters, except Tokens
 series:
 - Dragunity
+- Field Searcher
 images:
 - index: 1
   image: DragunityKnightRomulus-MGED-EN-R-1E.png
