--- a/rush.yaml
+++ b/rush.yaml
@@ -120810,7 +120810,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send the top 2 cards of your Deck and this face-up card from your field to the Graveyard.
+    Send the top 2 cards of your Deck to the Graveyard, and send this face-up card from your field to the Graveyard.
   de:
   es:
   fr:
