--- a/data/cards/66288028.yaml
+++ b/data/cards/66288028.yaml
@@ -8,7 +8,7 @@ name:
   it: Guerriero Fortezza
   pt: Guerreiro da Fortaleza
   ja: マッシブ・ウォリアー
-  ja_romaji: Mashibu Woriā
+  ja_romaji: Masshibu Woriā
   ko: 매시브 워리어
   ko_rr:
   zh-TW:
