--- a/data/cards/82693917.yaml
+++ b/data/cards/82693917.yaml
@@ -8,7 +8,7 @@ name:
   it: Vento, Signora della Fortuna
   pt: Senhora Fortuna do Vento
   ja: フォーチュンレディ・ウインディー
-  ja_romaji: Fōchun Redi Windī
+  ja_romaji: Fōchun Redi Uindī
   ko: 포츈 레이디 윈디
   ko_rr:
   zh-TW:
