--- a/data/cards/85862791.yaml
+++ b/data/cards/85862791.yaml
@@ -8,7 +8,7 @@ name:
   it: Giocare Sporco
   pt: Lutando Sujo
   ja: <ruby>泥仕合<rt>ドローゲーム</rt></ruby>
-  ja_romaji: Dorō Gēmū
+  ja_romaji: Dorō Gēmu
   ko: 드로우게임
   ko_rr: Deurougeim
   zh-TW:
