--- a/rush.yaml
+++ b/rush.yaml
@@ -100320,7 +100320,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Pay 500 LP and shuffle 2 cards from your hand into the Deck.
+    Pay 500 LP, and shuffle 2 cards from your hand into the Deck.
   de:
   es:
   fr:
@@ -100334,7 +100334,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    This card cannot be destroyed by battle until the end of your opponent's next turn. Then, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
