--- a/data/cards/yugipedia1025570.yaml
+++ b/data/cards/yugipedia1025570.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1 or more non-Tuner DARK Pendulum Monsters
-    This card's name becomes "Supreme King Z-ARC" while on the field. After damage calculation, when this card destroys an opponent’s monster by battle and/or inflicts battle damage to them: You can Special Summon up to 2 “Supreme King Dragon” monsters from your Deck, Extra Deck, and/or GY in Defense Position. If this card in the Monster Zone is destroyed by battle or card effect: You can place it in your Pendulum Zone.
+    This card's name becomes "Supreme King Z-ARC" while on the field. After damage calculation, when this card destroys an opponent's monster by battle or inflicts battle damage to your opponent: You can Special Summon up to 2 “Supreme King Dragon” monsters from your Deck, Extra Deck, and/or GY in Defense Position. If this card in the Monster Zone is destroyed by battle or card effect: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ def: 4000
 pendulum_scale: 1
 pendulum_effect:
   en: |-
-    You can Tribute 1 “Supreme King Dragon” or “Supreme King Gate” Pendulum Monster; Special Summon this card. You can only use this effect of "Supreme King Z-ARC - Synchro Universe" once per turn.
+    You can Tribute 1 "Supreme King Dragon" or "Supreme King Gate" Pendulum Monster; Special Summon this card. You can only use this effect of "Supreme King Z-ARC - Synchro Universe" once per turn.
   de:
   es:
   fr:
@@ -47,6 +47,7 @@ pendulum_effect:
   zh-CN:
 series:
 - Supreme King
+- Synchro
 images:
 - index: 1
   image: SupremeKingZARCSynchroUniverse-QCDB-JP-OP.png
