--- a/data/cards/82593786.yaml
+++ b/data/cards/82593786.yaml
@@ -98,12 +98,12 @@ sets:
   - set_number: CBLZ-JP003
     set_name: Cosmo Blazer
     rarities:
-    - Rare
+    - Common
   ko:
   - set_number: CBLZ-KR003
     set_name: Cosmo Blazer
     rarities:
-    - Rare
+    - Common
   zh-TW:
   - set_number: CBLZ-TC003
     set_name: Cosmo Blazer
