--- a/data/cards/30342076.yaml
+++ b/data/cards/30342076.yaml
@@ -35,8 +35,13 @@ text:
   ja: |-
     レベル４以下のサイバース族モンスター１体
     このカード名の効果は１ターンに１度しか使用できない。①：元々の攻撃力が２３００以上のサイバース族リンクモンスターのリンク素材としてこのカードが墓地へ送られた場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
-  ko:
-  zh-TW:
+  ko: |-
+    레벨 4 이하의 사이버스족 몬스터 1장
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 원래 공격력이 2300 이상인 사이버스족 링크 몬스터의 링크 소재로서 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
+  zh-TW: |-
+    等級４以下的電子界族怪獸１隻
+    此卡名的效果１回合僅限使用１次。
+    ①：可在此卡做為原本的攻擊力為２３００以上的電子界族連結怪獸的連結素材被送至墓地的狀況下發動。特殊召喚此卡。透過此效果特殊召喚的此卡，在從場上離開的狀況下將被除外。
   zh-CN: |-
     等级4以下的电子空间族怪兽1只
     这个卡名的效果1回合只能使用1次。①：这张卡作为原攻击力为2300以上的电子空间族链接怪兽的链接素材被送入墓地的场合可以发动。将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合除外。
@@ -85,3 +90,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 715633
+master_duel_rarity: UR
