--- a/data/cards/46485778.yaml
+++ b/data/cards/46485778.yaml
@@ -48,7 +48,12 @@ text:
     このカード名の①のモンスター効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、以下の効果から１つを選択して発動できる。●レベル１の儀式モンスター１体または「レシピ」カード１枚をデッキから手札に加える。●自分の墓地から「レシピ」カードを任意の数だけ除外し、その数と同じレベルを持つ「ヌーベルズ」儀式モンスター１体を手札から特殊召喚する。②：フィールドのこのカードがリリースされＥＸデッキに表側で加わった場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
     이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우, 이하의 효과에서 1개를 선택하고 발동할 수 있다. ●레벨 1 의 의식 몬스터 1장 또는 "요리법" 카드 1장을 덱에서 패에 넣는다. ●자신 묘지에서 "요리법" 카드를 임의의 수만큼 제외하고, 그 수와 같은 레벨을 가지는 "누밸즈" 의식 몬스터 1장을 패에서 특수 소환한다. ②: 필드의 이 카드가 릴리스되어 엑스트라 덱에 앞면으로 넣어졌을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的①怪獸效果，１回合僅限使用１次。
+    ①：在此卡召喚・特殊召喚的狀況下，可從以下效果選擇１個發動。
+    ●從牌組將１隻等級１的儀式怪獸或１張「食譜」卡加入手牌。
+    ●從我方墓地將任意數量的「食譜」卡除外，從手牌特殊召喚１隻等級與該數量相同的「新潮魔廚」儀式怪獸。
+    ②：可在場上的此卡被解放，以正面加入額外牌組的狀況下發動。將此卡置於我方的鐘擺區。
   zh-CN: |-
     此卡名的①怪兽效果１回合仅可使用１次。
     ①：此卡召唤・特殊召唤的情况下，可从以下效果中选择１个发动。
@@ -79,7 +84,9 @@ pendulum_effect:
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドに儀式モンスターが存在する場合、フィールドのモンスター１体を対象として発動できる。このカードを特殊召喚する。その後、対象のモンスターの表示形式を変更する。
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 의식 몬스터가 존재할 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 특수 소환한다. 그 후, 대상 몬스터의 표시 형식을 변경한다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的鐘擺效果，１回合僅限使用１次。
+    ①：在我方場上存在儀式怪獸的狀況下，可將場上的１隻怪獸做為對象發動。特殊召喚此卡。其後，變更對象怪獸的表示形式。
   zh-CN: |-
     此卡名的灵摆效果１回合仅可使用１次。
     ①：自己场上存在仪式怪兽的情况下，以场上的１只怪兽为对象可以发动。将此卡特殊召唤。然后，变更该对象怪兽的表示形式。
@@ -154,3 +161,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 980574
+master_duel_rarity: UR
