--- a/data/cards/yugipedia1025570.yaml
+++ b/data/cards/yugipedia1025570.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    1 Tuner + 1 or more non-Tuner DARK Pendulum Monsters
-    This card's name becomes "Supreme King Z-ARC" while on the field. After damage calculation, when this card destroys an opponent's monster by battle or inflicts battle damage to your opponent: You can Special Summon up to 2 “Supreme King Dragon” monsters from your Deck, Extra Deck, and/or GY in Defense Position. If this card in the Monster Zone is destroyed by battle or card effect: You can place this card in your Pendulum Zone.
+    1 Tuner + 1+ non-Tuner DARK Pendulum Monsters
+    This card's name becomes "Supreme King Z-ARC" while on the field. After damage calculation, when this card destroys an opponent's monster by battle or inflicts battle damage to your opponent: You can Special Summon up to 2 "Supreme King Dragon" monsters from your Deck, Extra Deck, and/or GY in Defense Position. If this card in the Monster Zone is destroyed by battle or card effect: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
