--- a/data/cards/03048768.yaml
+++ b/data/cards/03048768.yaml
@@ -57,26 +57,31 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE031
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR031
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT031
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT031
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP031
     set_name: 'Deck Build Pack: Valiant Smashers'
