--- a/data/cards/15982593.yaml
+++ b/data/cards/15982593.yaml
@@ -46,26 +46,36 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: VASM-DE019
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: VASM-FR019
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: VASM-IT019
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: VASM-PT019
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBVS-JP019
     set_name: 'Deck Build Pack: Valiant Smashers'
