--- a/data/cards/18165869.yaml
+++ b/data/cards/18165869.yaml
@@ -44,26 +44,31 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE004
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR004
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT004
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT004
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP004
     set_name: 'Deck Build Pack: Valiant Smashers'
