--- a/data/cards/23288411.yaml
+++ b/data/cards/23288411.yaml
@@ -43,26 +43,36 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: VASM-DE001
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: VASM-FR001
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: VASM-IT001
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: VASM-PT001
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBVS-JP001
     set_name: 'Deck Build Pack: Valiant Smashers'
