--- a/data/cards/41371602.yaml
+++ b/data/cards/41371602.yaml
@@ -39,26 +39,31 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE020
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR020
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT020
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT020
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP020
     set_name: 'Deck Build Pack: Valiant Smashers'
