--- a/data/cards/42216237.yaml
+++ b/data/cards/42216237.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-EN027
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   de:
   - set_number: JOTL-DE087
     set_name: Judgment of the Light
@@ -75,6 +79,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-DE027
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   fr:
   - set_number: JOTL-FR087
     set_name: Judgment of the Light
@@ -84,6 +92,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-FR027
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   it:
   - set_number: JOTL-IT087
     set_name: Judgment of the Light
@@ -93,6 +105,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-IT027
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   pt:
   - set_number: JOTL-PT087
     set_name: Judgment of the Light
@@ -102,6 +118,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Secret Rare
+  - set_number: VASM-PT027
+    set_name: Valiant Smashers
+    rarities:
+    - Rare
   ja:
   - set_number: EP14-JP008
     set_name: 'Extra Pack: Knights of Order'
