--- a/data/cards/43694075.yaml
+++ b/data/cards/43694075.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Mit dieser Karte wird „Totenkopfwächter“ als Ritualbeschwörung beschworen. Biete zusätzlich 1 oder mehrere Monster von deiner Hand oder deiner Seite des Spielfelds als Tribut an, die zusammen 7 oder mehr Stufen haben.
   es: |-
-    Esta carta se usa en la Invocación de Ritual de "Guardián del cráneo". También debes ofrecer monstruos cuyo Nivel total sea 7 o más de tu Campo o tu mano como Sacrificio.
+    Esta carta se usa en la Invocación de Ritual de "Guardián del Cráneo". También debes ofrecer monstruos cuyo Nivel total sea 7 o más de tu Campo o tu mano como Sacrificio.
   fr: |-
     Cette carte est utilisée pour faire une Invocation Rituelle de "Gardien du Crâne". Vous devez également sacrifier des monstres dont le total des Niveaux est égal à 7 ou plus du Terrain ou de votre main.
   it: |-
