--- a/data/cards/59509952.yaml
+++ b/data/cards/59509952.yaml
@@ -65,6 +65,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: SOVR-DE096
     set_name: Stardust Overdrive
@@ -86,6 +87,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: SOVR-FR096
     set_name: Stardust Overdrive
@@ -107,6 +109,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: SOVR-IT096
     set_name: Stardust Overdrive
@@ -128,6 +131,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: DESO-PT050
     set_name: Destiny Soldiers
@@ -141,6 +145,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: VJMP-JP038
     set_name: V Jump March 2009 promotional card
