--- a/data/cards/71525232.yaml
+++ b/data/cards/71525232.yaml
@@ -31,7 +31,8 @@ text:
   ko: |-
     ①: 이 카드가 패에서의 일반 소환 / 특수 소환에 성공했을 때에 발동할 수 있다. 이 카드 이외의 필드의 몬스터를 전부 파괴하고, 파괴한 몬스터 중, 공격력이 가장 높은 몬스터의 공격력만큼의 데미지를 상대에게 준다. 이 카드의 공격력은, 이 효과로 상대에게 준 데미지와 같은 수치가 된다. ②: 자신 엔드 페이즈에 발동한다. 자신의 LP를 절반으로 한다.
   zh-TW: |-
-    ①：可在此卡從手牌召喚・特殊召喚成功時發動。將場上的此卡以外的所有怪獸全部破壞，給予對方等同於破壞的怪獸中攻擊力最高的怪獸的攻擊力數值的傷害。此卡的攻擊力變為與透過此效果給予對方的傷害的數值相同。②：在我方結束階段發動。將我方的LP減半。
+    ①：可在此卡從手牌召喚・特殊召喚成功時發動。將場上的此卡以外的所有怪獸全部破壞，給予對方等同於破壞的怪獸中原本的攻擊力最高的怪獸的攻擊力數值的傷害。此卡的攻擊力變為與透過此效果給予對方的傷害的數值相同。
+    ②：在我方結束階段發動。將我方的LP減半。
   zh-CN: |-
     ①：这张卡从手卡的召唤·特殊召唤成功时才能发动。这张卡以外的场上的怪兽全部破坏，给与对方破坏的怪兽之内攻击力最高的怪兽的攻击力数值的伤害。这张卡的攻击力变成和这个效果给与对方的伤害相同数值。②：自己结束阶段发动。自己基本分变成一半。
 card_type: Monster
