--- a/rush.yaml
+++ b/rush.yaml
@@ -123330,7 +123330,7 @@ name:
   it:
   pt:
   ja: キャリアー・マンタレイ
-  ja_romaji: Kyariā Manta Rei
+  ja_romaji: Kyariā Mantarei
   ko:
   ko_rr:
   zh-TW:
@@ -124441,7 +124441,7 @@ name:
   it:
   pt:
   ja: スターズハンド・カメラレディ
-  ja_romaji: Sutāzu Hando Kamera Redi
+  ja_romaji: Sutāzuhando Kamera Redi
   ko:
   ko_rr:
   zh-TW:
