--- a/data/cards/62868900.yaml
+++ b/data/cards/62868900.yaml
@@ -8,7 +8,7 @@ name:
   it: D - Scudo
   pt:
   ja: <ruby>Ｄ<rt>ディー</rt></ruby>－シールド
-  ja_romaji: Dī Shīrudo
+  ja_romaji: Dī - Shīrudo
   ko: D－실드
   ko_rr:
   zh-TW:
