--- a/data/cards/31971040.yaml
+++ b/data/cards/31971040.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>選<rt>せん</rt></ruby><ruby>律<rt>りつ</rt></ruby>のヴァルモニカ
   ja_romaji: Senritsu no Varumonika
-  ko:
+  ko: 선율의 바르모니카
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28,7 +28,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドに「ヴァルモニカ」モンスターカードが存在する場合、以下の効果から１つを選んで適用する。自分フィールドに「ヴァルモニカ」Ｌモンスターが存在する場合、両方を選んで適用できる。
     ●自分は５００ＬＰ回復する。このターン中、自分フィールドの「ヴァルモニカ」モンスターカードを相手は効果の対象にできない。
     ●自分は５００ダメージを受ける。その後、相手フィールドの効果モンスター１体の効果をターン終了時まで無効にできる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "바르모니카" 몬스터 카드가 존재할 경우, 이하의 효과에서 1개를 고르고 적용한다. 자신 필드에 "바르모니카" 링크 몬스터가 존재할 경우, 양쪽을 고르고 적용할 수 있다.
+    ●자신은 500 LP 회복한다. 이 턴 중에, 자신 필드의 "바르모니카" 몬스터 카드를 상대는 효과의 대상으로 할 수 없다.
+    ●자신은 500 데미지를 받는다. 그 후, 상대 필드의 효과 몬스터 1장의 효과를 턴 종료시까지 무효로 할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Trap
