--- a/data/cards/77543769.yaml
+++ b/data/cards/77543769.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>騎士皇爆誕<rt>トゥルース・センチュリオン</rt></ruby>
   ja_romaji: Turūsu Senchurion
-  ko:
+  ko: 트루스 센츄리온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：モンスターの効果・魔法・罠カードが発動した時、自分の魔法＆罠ゾーンの表側表示のモンスターカード１枚を墓地へ送って発動できる。その発動を無効にし破壊する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때, 자신의 마법 & 함정 존의 앞면 표시의 몬스터 카드 1장을 묘지로 보내고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Trap
