--- a/data/cards/02815176.yaml
+++ b/data/cards/02815176.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴァルモニカの<ruby>神<rt>しん</rt></ruby><ruby>異<rt>い</rt></ruby>－ゼブフェーラ
   ja_romaji: Varumonika no Shin'i - Zebufēra
-  ko:
+  ko: 바르모니카의 신이－제브페라
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,9 @@ text:
   ja: |-
     効果モンスター１体
     このカードのＬ召喚は自分のＰゾーンの悪魔族モンスターカードの響鳴カウンターが３つ以上の場合にしか行えず、自分は「ヴァルモニカの神異－ゼブフェーラ」を１ターンに１度しか特殊召喚できない。①：自分フィールドのカードが戦闘・効果で破壊される場合、代わりに自分のＰゾーンの響鳴カウンターを３つ取り除く事ができる。②：相手ターンに１度、自分の墓地・除外状態の「ヴァルモニカ」通常魔法・通常罠カード１枚を対象として発動できる。その魔法・罠カード発動時の効果を適用する。
-  ko:
+  ko: |-
+    효과 몬스터 1장
+    이 카드의 링크 소환은 자신의 펜듈럼 존의 악마족 몬스터 카드의 향명 카운터가 3개 이상일 경우에밖에 실행할 수 없으며, 자신은 "바르모니카의 신이－제브페라"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 자신 필드의 카드가 전투 / 효과로 파괴될 경우, 대신에 자신의 펜듈럼 존의 향명 카운터를 3개 제거할 수 있다. ②: 상대 턴에 1번, 자신의 묘지 / 제외 상태인 "바르모니카" 일반 마법 / 일반 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 마법 / 함정 카드 발동시의 효과를 적용한다.
   zh-TW:
   zh-CN:
 card_type: Monster
