--- a/data/cards/04160316.yaml
+++ b/data/cards/04160316.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>騎士の絆<rt>フェイス・オブ・センチュリオン</rt></ruby>
   ja_romaji: Feisu Obu Senchurion
-  ko:
+  ko: 페이스 오브 센츄리온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・墓地から「センチュリオン」モンスター１体を永続罠カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。②：このカードが墓地に存在する状態で、自分フィールドに「センチュリオン」Ｓモンスターが特殊召喚された場合、このカードを除外し、自分の墓地の「センチュリオン」モンスター１体を対象として発動できる。そのモンスターを永続罠カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 패 / 묘지에서 "센츄리온" 몬스터 1장을 지속 함정 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신 필드에 "센츄리온" 싱크로 몬스터가 특수 소환되었을 경우, 이 카드를 제외하고, 자신 묘지의 "센츄리온" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 지속 함정 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다.
   zh-TW:
   zh-CN:
 card_type: Spell
