--- a/data/cards/05605529.yaml
+++ b/data/cards/05605529.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴァルモニカ・シェルタ
   ja_romaji: Varumonika Sheruta
-  ko:
+  ko: 바르모니카 셸타
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28,7 +28,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選んで適用する。自分のＰゾーンに「ヴァルモニカ」カードが存在しない場合、適用する効果は相手が選ぶ。
     ●自分は５００ＬＰ回復する。その後、自分の手札を１枚選んでデッキの一番下に戻す事ができる。その場合、自分は２枚ドローする。
     ●自分は５００ダメージを受ける。その後、デッキから「ヴァルモニカ・シェルタ」以外の「ヴァルモニカ」魔法・罠カード１枚を手札に加える事ができる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 고르고 적용한다. 자신의 펜듈럼 존에 "바르모니카" 카드가 존재하지 않을 경우, 적용할 효과는 상대가 고른다.
+    ●자신은 500 LP 회복한다. 그 후, 자신의 패를 1장 고르고 덱 맨 아래로 되돌릴 수 있다. 그 경우, 자신은 2장 드로우한다.
+    ●자신은 500 데미지를 받는다. 그 후, 덱에서 "바르모니카 셸타" 이외의 "바르모니카" 마법 / 함정 카드 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
