--- a/data/cards/16598965.yaml
+++ b/data/cards/16598965.yaml
@@ -50,8 +50,8 @@ text:
     ●悪魔族：相手は１枚ドローする。その後、相手は手札をランダムに１枚捨てる。さらに相手は手札がある場合には１枚選んで捨てる。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 효과 몬스터의 종족에 따라 이하의 효과를 각각 적용할 수 있다.
-    ●천사족: 자신은 덱에서 3장 드로우한다. 그 후, 패를 2장 고르고 좋아하는 순서대로 덱 맨 아래로 되돌린다.
-    ●악마족: 상대는 덱에서 1장 드로우한다. 그 후, 패를 무작위로 1장 고르고 버린다. 추가로 상대는 패가 있을 경우에는 1장 고르고 버린다.
+    ●천사족: 자신은 3장 드로우한다. 그 후, 패를 2장 고르고 좋아하는 순서대로 덱 아래로 되돌린다.
+    ●악마족: 상대는 1장 드로우한다. 그 후, 상대는 패를 무작위로 1장 버린다. 추가로 상대는 패가 있을 경우에는 1장 고르고 버린다.
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：根據我方場上的效果怪獸種族可分別適用以下效果。
     ●天使族：我方從牌組抽３張牌。其後，選擇２張手牌依喜好順序送回牌組的最下方。
