--- a/data/cards/17943271.yaml
+++ b/data/cards/17943271.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: メメント・ゴブリン
   ja_romaji: Memento Goburin
-  ko:
+  ko: 메멘토 고블린
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、自分フィールドに「冥骸合竜－メメントラル・テクトリカ」が存在する場合、このカードを手札から捨てて発動できる。このターン中、自分フィールドの「メメント」モンスターを相手は効果の対象にできない。②：自分メインフェイズに発動できる。自分フィールドの「メメント」モンスター１体を破壊し、デッキから「メメント・ゴブリン」以外の「メメント」カードを２枚まで墓地へ送る（同名カードは１枚まで）。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 자신 필드에 "명해합룡－메멘토랄 테쿠틀리카"가 존재할 경우, 이 카드를 패에서 버리고 발동할 수 있다. 이 턴 중에, 자신 필드의 "메멘토" 몬스터를 상대는 효과의 대상으로 할 수 없다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신 필드의 "메멘토" 몬스터 1장을 파괴하고, 덱에서 "메멘토 고블린" 이외의 "메멘토" 카드를 2장까지 묘지로 보낸다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN:
 card_type: Monster
