--- a/data/cards/23288411.yaml
+++ b/data/cards/23288411.yaml
@@ -9,7 +9,7 @@ name:
   pt: Mementoal Tecuhtlica - Criação Combinada
   ja: <ruby>冥<rt>めい</rt></ruby><ruby>骸<rt>がい</rt></ruby><ruby>合<rt>ごう</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>－メメントラル・テクトリカ
   ja_romaji: Meigaigōryū - Mementoraru Tekutorika
-  ko:
+  ko: 명해합룡－메멘토랄 테쿠틀리카
   ko_rr:
   zh-TW:
   zh-CN:
@@ -24,7 +24,8 @@ text:
     Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial (da sua mão ou do Cemitério) ao embaralhar no Deck/Deck Adicional 5 outros monstros "Memento" com nomes diferentes da sua mão e/ou do Cemitério. Enquanto você não controlar nenhum outro monstro, este card pode atacar todos os monstros que seu oponente controla, uma vez cada. Uma vez por turno, se seu oponente ativar um card ou efeito (exceto durante a Etapa de Dano): você pode Invocar por Invocação-Especial 1 monstro "Memento" da sua mão ou do Cemitério.
   ja: |-
     このカードは通常召喚できない。このカード以外の自分の手札・墓地の「メメント」モンスター５種類を１体ずつ、デッキ・ＥＸデッキに戻した場合のみ手札・墓地から特殊召喚できる。①：自分フィールドに他のモンスターが存在しない場合、このカードは相手モンスター全てに１回ずつ攻撃できる。②：１ターンに１度、相手が魔法・罠・モンスターの効果を発動した場合に発動できる。自分の手札・墓地から「メメント」モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    이 카드는 통상 소환할 수 없다. 이 카드 이외의 자신의 패 / 묘지의 "메멘토" 몬스터 5종류를 1장씩, 덱 / 엑스트라 덱으로 되돌렸을 경우에만 패 / 묘지에서 특수 소환할 수 있다. ①: 자신 필드에 다른 몬스터가 존재하지 않을 경우, 이 카드는 상대 몬스터 전부에 1회씩 공격할 수 있다. ②: 1턴에 1번, 상대가 마법 / 함정 / 몬스터의 효과를 발동했을 경우에 발동할 수 있다. 자신의 패 / 묘지에서 "메멘토" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
