--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -88,26 +88,46 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+  - set_number: OP24-EN0??
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: WISU-DE022
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+  - set_number: OP24-DE0??
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: WISU-FR022
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+  - set_number: OP24-FR0??
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: WISU-IT022
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+  - set_number: OP24-IT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: WISU-PT022
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+  - set_number: OP24-PT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: DBWS-JP022
     set_name: 'Deck Build Pack: Wild Survivors'
