--- a/data/cards/39210885.yaml
+++ b/data/cards/39210885.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>天<rt>てん</rt></ruby><ruby>魔<rt>ま</rt></ruby>の<ruby>聲<rt>せい</rt></ruby><ruby>選<rt>せん</rt></ruby><ruby>器<rt>き</rt></ruby>－『ヴァルモニカ』
   ja_romaji: Tenma no Seisenki - "Varumonika"
-  ko:
+  ko: 천마의 성선기－『바르모니카』
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できず、このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、デッキから「ヴァルモニカ」モンスター１体を手札に加える事ができる。②：自分のＰゾーンのカードに響鳴カウンターが置かれ、そのカードの響鳴カウンターが３つになった場合、相手フィールドのモンスター１体を対象として発動できる。そのモンスターのコントロールをエンドフェイズまで得る。この効果でコントロールを得たモンスターは攻撃宣言できない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 덱에서 "바르모니카" 몬스터 1장을 패에 넣을 수 있다. ②: 자신의 펜듈럼 존의 카드에 향명 카운터가 놓여지고, 그 카드의 향명 카운터가 3개가 되었을 경우, 상대 필드의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 컨트롤을 엔드 페이즈까지 얻는다. 이 효과로 컨트롤을 얻은 몬스터는 공격 선언할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Spell
