--- a/data/cards/40155014.yaml
+++ b/data/cards/40155014.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>騎士魔防陣<rt>センチュリオン・ファランクス</rt></ruby>
   ja_romaji: Senchurion Farankusu
-  ko:
+  ko: 센츄리온 파랑크스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：フィールドの表側表示のモンスターカード１枚を対象として発動できる。そのカードを除外する。次のターンのスタンバイフェイズに、この効果で除外したモンスターを持ち主のフィールドに特殊召喚する。②：墓地のこのカードを除外し、自分の墓地の「センチュリオン」Ｓモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果で特殊召喚したモンスターの攻撃力は１５００ダウンする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 필드의 앞면 표시의 몬스터 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. 다음 턴의 스탠바이 페이즈에, 이 효과로 제외한 몬스터를 주인의 필드에 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 "센츄리온" 싱크로 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과로 특수 소환한 몬스터의 공격력은 1500 내린다.
   zh-TW:
   zh-CN:
 card_type: Trap
