--- a/data/cards/42193638.yaml
+++ b/data/cards/42193638.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴァルモニカ・ヴェルサーレ
   ja_romaji: Varumonika Verusāre
-  ko:
+  ko: 바르모니카 베르사레
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28,7 +28,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選んで適用する。自分のＰゾーンに「ヴァルモニカ」カードが存在しない場合、適用する効果は相手が選ぶ。
     ●自分は５００ＬＰ回復する。その後、「ヴァルモニカ」カードが出るまで自分のデッキの上からカードをめくる事ができる。その場合、めくった「ヴァルモニカ」カードを手札に加え、残りをデッキに戻す。
     ●自分は５００ダメージを受ける。その後、デッキから「ヴァルモニカ・ヴェルサーレ」以外の「ヴァルモニカ」カード１枚を墓地へ送る事ができる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 고르고 적용한다. 자신의 펜듈럼 존에 "바르모니카" 카드가 존재하지 않을 경우, 적용할 효과는 상대가 고른다.
+    ●자신은 500 LP 회복한다. 그 후, "바르모니카" 카드가 나올 때까지 자신의 덱 위에서 카드를 넘길 수 있다. 그 경우, 넘긴 "바르모니카" 카드를 패에 넣고, 나머지를 덱으로 되돌린다.
+    ●자신은 500 데미지를 받는다. 그 후, 덱에서 "바르모니카 베르사레" 이외의 "바르모니카" 카드 1장을 묘지로 보낼 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
