--- a/data/cards/42493140.yaml
+++ b/data/cards/42493140.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>従騎士<rt>センチュリオン</rt></ruby>トゥルーデア
   ja_romaji: Senchurion Turūdea
-  ko:
+  ko: 센츄리온 트루디아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。自分フィールドのこのカードと、「従騎士トゥルーデア」以外の手札・デッキの「センチュリオン」モンスター１体を、永続罠カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。このターン、自分は「従騎士トゥルーデア」を特殊召喚できない。②：このカードが永続罠カード扱いの場合、自分・相手のメインフェイズに発動できる。このカードを特殊召喚する。その後、このカードのレベルを４つ上げる事ができる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신 필드의 이 카드와, "센츄리온 트루디아" 이외의 패 / 덱의 "센츄리온" 몬스터 1장을, 지속 함정 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다. 이 턴에, 자신은 "센츄리온 트루디아"를 특수 소환할 수 없다. ②: 이 카드를 지속 함정 카드로 취급할 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 이 카드를 특수 소환한다. 그 후, 이 카드의 레벨을 4개 올릴 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
