--- a/data/cards/54550967.yaml
+++ b/data/cards/54550967.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: メメント・エンウィッチ
   ja_romaji: Memento Enwicchi
-  ko:
+  ko: 메멘토 엔위치
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「メメント・エンウィッチ」以外の「メメント」モンスター１体を手札に加える。②：自分の墓地のレベル２以下の「メメント」モンスター１体を対象として発動できる。自分フィールドの「メメント」モンスター１体を破壊し、対象のモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. 덱에서 "메멘토 엔위치" 이외의 "메멘토" 몬스터 1장을 패에 넣는다. ②: 자신 묘지의 레벨 2 이하의 "메멘토" 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신 필드의 "메멘토" 몬스터 1장을 파괴하고, 대상 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
