--- a/data/cards/55272555.yaml
+++ b/data/cards/55272555.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: メメント・ホーン・ドラゴン
   ja_romaji: Memento Hōn Doragon
-  ko:
+  ko: 메멘토 혼 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分の墓地に「メメント」モンスターが３種類以上存在する場合、このカードは手札から特殊召喚できる。②：フィールドのこのカードが効果で破壊された場合、自分フィールドの「メメント」カードを含むフィールドの表側表示カード３枚を対象として発動できる。そのカードを破壊する。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 "메멘토" 몬스터가 3종류 이상 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 필드의 이 카드가 효과로 파괴되었을 경우, 자신 필드의 "메멘토" 카드를 포함하는 필드의 앞면 표시 카드 3장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Monster
