--- a/data/cards/63261835.yaml
+++ b/data/cards/63261835.yaml
@@ -37,7 +37,7 @@ text:
     このカードをＳ召喚する場合、自分フィールドの「ハーピィ」モンスター１体をチューナーとして扱う事ができる。このカード名の②の効果は１ターンに１度しか使用できない。①：このカードのカード名は、フィールド・墓地に存在する限り「ハーピィ・レディ」として扱う。②：魔法・罠カードの効果が発動した時、相手フィールドのモンスター１体または自分フィールドの「ハーピィ」モンスター１体を対象として発動できる。そのモンスターを手札に戻す。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    이 카드를 싱크로 소환할 경우, 자신 필드의 "해피" 몬스터 1장을 튜너로서 취급할 수 있다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로서 취급한다. ②: 마법 / 함정 카드의 효과가 발동했을 때, 상대 필드의 몬스터 1장 또는 자신 필드의 "해피" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
+    이 카드를 싱크로 소환할 경우, 자신 필드의 "해피" 몬스터 1장을 튜너로 취급할 수 있다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 마법 / 함정 카드의 효과가 발동했을 때, 상대 필드의 몬스터 1장 또는 자신 필드의 "해피" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패로 되돌린다.
   zh-TW: |-
     協調＋協調以外的怪獸１隻以上
     在同步召喚此卡的狀況下，可將我方場上的１隻「神鷹」怪獸視為協調。此卡名的②效果，１回合僅限使用１次。①：只要此卡存在於場上・墓地，卡名就視為「神鷹女郎」。②：魔法・陷阱卡發動效果時，可將對方場上的１隻怪獸或我方場上的１隻「神鷹」怪獸做為對象發動。將該怪獸送回持有者的手牌。
