--- a/data/cards/76821171.yaml
+++ b/data/cards/76821171.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴァルモニカの<ruby>異<rt>い</rt></ruby><ruby>神<rt>しん</rt></ruby>－ジュラルメ
   ja_romaji: Varumonika no Ishin - Jurarume
-  ko:
+  ko: 바르모니카의 이신－쥬라르메
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,9 @@ text:
   ja: |-
     効果モンスター１体
     このカードのＬ召喚は自分のＰゾーンの天使族モンスターカードの響鳴カウンターが３つ以上の場合にしか行えず、自分は「ヴァルモニカの異神－ジュラルメ」を１ターンに１度しか特殊召喚できない。①：このカードがＬ召喚した場合、自分のＰゾーンの響鳴カウンターの数まで、相手フィールドのモンスターを対象として発動できる。そのモンスターを破壊する。②：自分のＰゾーンの響鳴カウンターを３つ取り除いて発動できる。このターン、このカードは１度のバトルフェイズ中に３回攻撃できる。
-  ko:
+  ko: |-
+    효과 몬스터 1장
+    이 카드의 링크 소환은 자신의 펜듈럼 존의 천사족 몬스터 카드의 향명 카운터가 3개 이상일 경우에밖에 실행할 수 없으며, 자신은 "바르모니카의 이신－쥬라르메"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 이 카드를 링크 소환했을 경우, 자신의 펜듈럼 존의 향명 카운터의 수까지, 상대 필드의 몬스터를 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴한다. ②: 자신의 펜듈럼 존의 향명 카운터를 3개 제거하고 발동할 수 있다. 이 턴에, 이 카드는 1번의 배틀 페이즈 중에 3회 공격할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
