--- a/data/cards/78598237.yaml
+++ b/data/cards/78598237.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴァルモニカ・イントナーレ
   ja_romaji: Varumonika Intonāre
-  ko:
+  ko: 바르모니카 인토나레
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28,7 +28,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選んで適用する。自分のＰゾーンに「ヴァルモニカ」カードが存在しない場合、適用する効果は相手が選ぶ。
     ●自分は５００ＬＰ回復する。特殊召喚可能なモンスターが自分の墓地に存在する場合、さらにその内の１体を相手が選び、そのモンスターを自分フィールドに特殊召喚する。
     ●自分は５００ダメージを受ける。その後、自分の墓地からレベル４モンスター１体を手札に加える事ができる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 고르고 적용한다. 자신의 펜듈럼 존에 "바르모니카" 카드가 존재하지 않을 경우, 적용할 효과는 상대가 고른다.
+    ●자신은 500 LP 회복한다. 특수 소환 가능한 몬스터가 자신 묘지에 존재할 경우, 추가로 그 중의 1장을 상대가 고르고, 그 몬스터를 자신 필드에 특수 소환한다.
+    ●자신은 500 데미지를 받는다. 그 후, 자신 묘지에서 레벨 4 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
