--- a/data/cards/79600447.yaml
+++ b/data/cards/79600447.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: メメント・クレニアム・バースト
   ja_romaji: Memento Kureniamu Bāsuto
-  ko:
+  ko: 메멘토 크레니엄 버스트
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は同一チェーン上では１度しか発動できない。①：攻撃可能な相手モンスターは、自分フィールドに「メメント」モンスターが存在する限り、その内の攻撃力が一番高いモンスターを攻撃しなければならない。②：相手がフィールドのモンスターの効果を発動した時、自分フィールドの「冥骸合竜－メメントラル・テクトリカ」１体を対象として発動できる。そのモンスターの攻撃力・守備力を１０００ダウンし、その発動した効果を無効にする。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 동일한 체인 위에서는 1번밖에 발동할 수 없다. ①: 공격 가능한 상대 몬스터는, 자신 필드에 "메멘토" 몬스터가 존재하는 한, 그 중의 공격력이 가장 높은 몬스터를 공격해야 한다. ②: 상대가 필드의 몬스터의 효과를 발동했을 때, 자신 필드의 "명해합룡－메멘토랄 테쿠틀리카" 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력 / 수비력을 1000 내리고, 그 발동한 효과를 무효로 한다.
   zh-TW:
   zh-CN:
 card_type: Trap
