--- a/data/cards/23220533.yaml
+++ b/data/cards/23220533.yaml
@@ -46,7 +46,11 @@ series:
 - Starry Knight
 images:
 - index: 1
+  image: StarryKnightRayel-SLT1-JP-SR.png
+  illustration: StarryKnightRayel-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: StarryKnightRayel-GFTP-EN-UR-1E.png
+  illustration: StarryKnightRayel-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: GFTP-EN028
