--- a/data/rush/16307.yaml
+++ b/data/rush/16307.yaml
@@ -53,7 +53,7 @@ images:
 - index: 1
   image: BusterBlader-RDLGP1-JP-R.png
   illustration: BusterBlader-DBR-JP-VG-artwork.png
-- index: '1.1'
+- index: 2
   image: BusterBlader-RDS23P-JP-OP.png
 sets:
   ja:
