--- a/data/rush/15781.yaml
+++ b/data/rush/15781.yaml
@@ -25,7 +25,7 @@ text:
     Un demone che confonde i nemici con i suoi poteri oscuri. Tra tutti i mostri di Tipo Demone, questo vanta una forza considerevole.
   pt:
   ja: |-
-    <ruby>闇<rt>やみ</rt></ruby>の<ruby>力<rt>ちから</rt></ruby>を<ruby>使<rt>つか</rt></ruby>い、<ruby>人<rt>ひと</rt></ruby>の<ruby>心<rt>こころ</rt></ruby>を<ruby>惑<rt>まど</rt></ruby>わすデーモン。<ruby>悪<rt>あく</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>族<rt>ぞく</rt></ruby>ではかなり<ruby>強<rt>きょう</rt></ruby><ruby>力<rt>りょく</rt></ruby>な<ruby>力<rt>ちから</rt></ruby>を<ruby>誇<rt>ほこ</rt></ruby>る。
+    闇の力を使い、人の心を惑わすデーモン。悪魔族ではかなり強力な力を誇る。
   ko: |-
     어둠의 힘을 사용하여, 사람의 마음을 유혹하는 데몬. 악마족 중에서도 상당히 강력한 힘을 자랑한다.
   zh-TW:
@@ -40,6 +40,9 @@ legend: true
 images:
 - index: 1
   image: SummonedSkull-RDLGP1-JP-R.png
+  illustration: SummonedSkull-DBR-JP-VG-artwork.png
+- index: 2
+  image: SummonedSkull-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP03-JP000
