--- a/data/rush/16111.yaml
+++ b/data/rush/16111.yaml
@@ -21,7 +21,7 @@ text:
   it:
   pt:
   ja: |-
-    <ruby>剣<rt>けん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>を<ruby>学<rt>まな</rt></ruby>んだエルフ。<ruby>素<rt>す</rt></ruby><ruby>早<rt>ばや</rt></ruby>い<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>で<ruby>敵<rt>てき</rt></ruby>を<ruby>翻<rt>ほん</rt></ruby><ruby>弄<rt>ろう</rt></ruby>する。
+    剣術を学んだエルフ。素早い攻撃で敵を翻弄する。
   ko: |-
     뛰어난 검술 실력을 자랑하는 엘프. 재빠른 공격으로 적을 당황하게 만든다.
   zh-TW:
