--- a/data/cards/yugipedia1026256.yaml
+++ b/data/cards/yugipedia1026256.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be destroyed by monster effects. You can only use each of the following effects of "Gold Sarcophagus of Light" once per turn. During your Main Phase: You can add 1 card from your Deck to your hand that mentions “Gold Sarcophagus of Light”, except “Gold Sarcophagus of Light”. If your opponent Special Summons a monster(s) from the GY: You can discard 1 Spell, then target 1 of those monsters; send it to the GY.
+    Cannot be destroyed by monster effects. You can only use each of the following effects of "Gold Sarcophagus of Light" once per turn. During your Main Phase: You can add 1 card from your Deck to your hand that mentions "Gold Sarcophagus of Light", except "Gold Sarcophagus of Light". If your opponent Special Summons a monster(s) from the GY: You can discard 1 Spell, then target 1 of those monsters; send it to the GY.
   de:
   es:
   fr:
@@ -38,6 +38,14 @@ sets:
     set_name: Legacy of Destruction
     rarities:
     - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: LEDE-JP051
+    set_name: Legacy of Destruction +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
