--- a/data/cards/35050257.yaml
+++ b/data/cards/35050257.yaml
@@ -8,7 +8,7 @@ name:
   it: Cyber Larva
   pt: Larva Cibernética
   ja: サイバー・ラーバァ
-  ja_romaji: Saibā Rābwa
+  ja_romaji: Saibā Rābaa
   ko: 사이버 라바
   ko_rr: Saibeo Raba
   zh-TW:
