--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -63,7 +63,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-EN000
+  - set_number: LEDE-EN000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -80,7 +80,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-DE000
+  - set_number: LEDE-DE000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -97,7 +97,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-FR000
+  - set_number: LEDE-FR000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -114,7 +114,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-IT000
+  - set_number: LEDE-IT000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -131,7 +131,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-PT000
+  - set_number: LEDE-PT000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -148,7 +148,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-JP000
+  - set_number: LEDE-JP000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -165,7 +165,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-KR000
+  - set_number: LEDE-KR000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
@@ -182,7 +182,7 @@ sets:
     set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-SC000
+  - set_number: LEDE-SC000
     set_name: Legacy of Destruction
     rarities:
     - Quarter Century Secret Rare
