--- a/data/rush/yugipedia1026309.yaml
+++ b/data/rush/yugipedia1026309.yaml
@@ -14,13 +14,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and 2 "Interstellive" and/or "Interstellime" face-up on your field.
+    You have 10 or more cards in your Deck and have a total of 2 "Interstellive" and/or "Interstellime" face-up on your field.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上で、自分フィールドの表側表示の「インターステライヴ」「インターステライム」が合計２体の場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
