--- a/data/cards/yugipedia1026257.yaml
+++ b/data/cards/yugipedia1026257.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ガンドラ<ruby>G<rt>ギアス</rt></ruby>
+  ja: <ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ガンドラ<ruby>Ｇ<rt>ギアス</rt></ruby>
   ja_romaji: Hakairyū Gandora Giasu
   ko:
   ko_rr:
