--- a/data/rush/yugipedia1020989.yaml
+++ b/data/rush/yugipedia1020989.yaml
@@ -70,6 +70,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
