--- a/data/rush/yugipedia1023238.yaml
+++ b/data/rush/yugipedia1023238.yaml
@@ -60,6 +60,8 @@ def: 2000
 images:
 - index: 1
   image: CyberShark-RDKP15-JP-OP.png
+- index: 2
+  image: CyberShark-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP021
