--- a/data/rush/yugipedia1024752.yaml
+++ b/data/rush/yugipedia1024752.yaml
@@ -43,6 +43,8 @@ property: Normal
 images:
 - index: 1
   image: MaidsMischief-RDKP15-JP-OP.png
+- index: 2
+  image: MaidsMischief-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP060
