--- a/data/rush/yugipedia1025055.yaml
+++ b/data/rush/yugipedia1025055.yaml
@@ -49,6 +49,8 @@ def: 0
 images:
 - index: 1
   image: PureLoveAngel-RDKP15-JP-OP.png
+- index: 2
+  image: PureLoveAngel-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP030
