--- a/data/rush/yugipedia106991.yaml
+++ b/data/rush/yugipedia106991.yaml
@@ -45,6 +45,8 @@ series:
 images:
 - index: 1
   image: FusionCancel-RDKP15-JP-OP.png
+- index: 2
+  image: FusionCancel-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP066
