--- a/data/rush/16719.yaml
+++ b/data/rush/16719.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack on your face-up Machine Type monster, pay 600 LP.
+    When an opponent's monster declares an attack targeting your face-up Machine Type monster, pay 600 LP.
   de:
   es:
   fr:
