--- a/data/rush/16292.yaml
+++ b/data/rush/16292.yaml
@@ -34,7 +34,7 @@ atk: 1400
 def: 1300
 images:
 - index: 1
-  image: BeanSoldier-RDB002-JP-C.png
+  image: BeanSoldier-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B002-JP009
