--- a/data/rush/16580.yaml
+++ b/data/rush/16580.yaml
@@ -34,7 +34,7 @@ atk: 1500
 def: 800
 images:
 - index: 1
-  image: Uraby-RDMAX2-JP-C.png
+  image: Uraby-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP012
