--- a/data/rush/16590.yaml
+++ b/data/rush/16590.yaml
@@ -36,7 +36,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: Cycliptron-RDSBD6-JP-C.png
+  image: Cycliptron-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP022
