--- a/data/rush/16911.yaml
+++ b/data/rush/16911.yaml
@@ -46,7 +46,7 @@ series:
 - The
 images:
 - index: 1
-  image: ThePowerUp-RDEXT1-JP-C.png
+  image: ThePowerUp-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP027
