--- a/data/rush/16912.yaml
+++ b/data/rush/16912.yaml
@@ -46,7 +46,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheBarrier-RDEXT1-JP-C.png
+  image: TheBarrier-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP028
