--- a/data/rush/16963.yaml
+++ b/data/rush/16963.yaml
@@ -34,7 +34,7 @@ atk: 1600
 def: 1300
 images:
 - index: 1
-  image: SpikeSeadra-RDB003-JP-C.png
+  image: SpikeSeadra-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B003-JP010
