--- a/data/rush/16999.yaml
+++ b/data/rush/16999.yaml
@@ -48,7 +48,7 @@ atk: 1100
 def: 0
 images:
 - index: 1
-  image: Dosodon-RDKP07-JP-R.png
+  image: Dosodon-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP033
