--- a/rush.yaml
+++ b/rush.yaml
@@ -2667,7 +2667,7 @@ atk: 800
 def: 1200
 images:
 - index: 1
-  image: WhisperingFairy-RDGRP1-JP-C.png
+  image: WhisperingFairy-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP018
@@ -3615,7 +3615,7 @@ atk: 2400
 def: 1400
 images:
 - index: 1
-  image: MaxRaider-RDKP01-JP-R.png
+  image: MaxRaider-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP016
@@ -3843,7 +3843,7 @@ atk: 1300
 def: 300
 images:
 - index: 1
-  image: ThundertheThunder-RDSBD1-JP-C.png
+  image: ThundertheThunder-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP032
@@ -4344,7 +4344,7 @@ images:
   image: HammerCrush-RDKP01-JP-SR.png
   illustration: HammerCrush-DBR-JP-VG-artwork.png
 - index: 2
-  image: HammerCrush-RDGRC1-JP-SR.png
+  image: HammerCrush-RDSST1-JP-C.png
   illustration: HammerCrush-DBR-JP-VG-artwork-2.png
 - index: 3
   image: HammerCrush-RDS23P-JP-OP.png
@@ -5457,7 +5457,7 @@ atk: 300
 def: 200
 images:
 - index: 1
-  image: SkullServant-RDKP01-JP-C.png
+  image: SkullServant-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP009
@@ -11490,7 +11490,7 @@ atk: 2300
 def: 400
 images:
 - index: 1
-  image: SavageClawTiger-RDKP03-JP-R.png
+  image: SavageClawTiger-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP019
@@ -12210,7 +12210,7 @@ atk: 1800
 def: 1800
 images:
 - index: 1
-  image: BlueFalconTengu-RDSBD3-JP-C.png
+  image: BlueFalconTengu-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/CP01-JP005
@@ -15361,7 +15361,7 @@ atk: 1200
 def: 1000
 images:
 - index: 1
-  image: HitotsuMeGiant-RDKP03-JP-C.png
+  image: HitotsuMeGiant-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP008
@@ -15481,7 +15481,7 @@ atk: 1400
 def: 1000
 images:
 - index: 1
-  image: WaterMagician-RDKP03-JP-R.png
+  image: WaterMagician-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP010
@@ -25205,7 +25205,7 @@ series:
 - Magma
 images:
 - index: 1
-  image: Aromagmabear-RDKP04-JP-C.png
+  image: Aromagmabear-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP04-JP035
@@ -27991,7 +27991,7 @@ atk: 1400
 def: 1300
 images:
 - index: 1
-  image: BeanSoldier-RDB002-JP-C.png
+  image: BeanSoldier-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B002-JP009
@@ -28362,7 +28362,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: MonsterReincarnation-RDP003-JP-SPR.png
+  image: MonsterReincarnation-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/P003-JP003
@@ -33938,7 +33938,7 @@ atk: 1500
 def: 800
 images:
 - index: 1
-  image: Uraby-RDMAX2-JP-C.png
+  image: Uraby-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP012
@@ -34548,7 +34548,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: Cycliptron-RDSBD6-JP-C.png
+  image: Cycliptron-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP022
@@ -36453,7 +36453,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: SunnyFairySpinangel-RDKP06-JP-R.png
+  image: SunnyFairySpinangel-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP001
@@ -36933,7 +36933,7 @@ atk: 1500
 def: 800
 images:
 - index: 1
-  image: FlyingKamakiri2-RDKP06-JP-R.png
+  image: FlyingKamakiri2-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP010
@@ -40390,7 +40390,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attacking monster loses 400 ATK until the end of this turn. Monsters cannot be destroyed by that battle.
+    The attacking monster loses 400 ATK until the end of this turn. Then, monsters cannot be destroyed by that battle.
   de:
   es:
   fr:
@@ -40449,7 +40449,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack on your face-up Machine Type monster, pay 600 LP.
+    When an opponent's monster declares an attack targeting your face-up Machine Type monster, pay 600 LP.
   de:
   es:
   fr:
@@ -45337,7 +45337,7 @@ series:
 - The
 images:
 - index: 1
-  image: ThePowerUp-RDEXT1-JP-C.png
+  image: ThePowerUp-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP027
@@ -45406,7 +45406,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheBarrier-RDEXT1-JP-C.png
+  image: TheBarrier-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP028
@@ -46498,7 +46498,7 @@ atk: 1200
 def: 1400
 images:
 - index: 1
-  image: GigaTechWolf-RDEXT1-JP-C.png
+  image: GigaTechWolf-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP042
@@ -47736,7 +47736,7 @@ atk: 1300
 def: 500
 images:
 - index: 1
-  image: TheAllSeeingWhiteTiger-RDB003-JP-C.png
+  image: TheAllSeeingWhiteTiger-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B003-JP008
@@ -47840,7 +47840,7 @@ atk: 1600
 def: 1300
 images:
 - index: 1
-  image: SpikeSeadra-RDB003-JP-C.png
+  image: SpikeSeadra-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B003-JP010
@@ -50080,7 +50080,7 @@ atk: 1100
 def: 0
 images:
 - index: 1
-  image: Dosodon-RDKP07-JP-R.png
+  image: Dosodon-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP033
@@ -55127,7 +55127,7 @@ atk: 1800
 def: 1500
 images:
 - index: 1
-  image: EmperoroftheLandandSea-RDB004-JP-C.png
+  image: EmperoroftheLandandSea-RDSST1-JP-C.png
 sets:
   ja:
   - set_number: RD/B004-JP009
@@ -78603,7 +78603,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A dragon child with hidden potential. It dreams of those goggles that show a vast virtual world.'
+    A dragon child with hidden potential. It dreams of those goggles that show a vast virtual world.
   de:
   es:
   fr:
