--- a/data/rush/16606.yaml
+++ b/data/rush/16606.yaml
@@ -51,6 +51,9 @@ series:
 images:
 - index: 1
   image: AgarieltheFinestSushiFairy-RDS223-JP-ScR.png
+  illustration: AgarieltheFinestSushiFairy-DBR-JP-VG-artwork.png
+- index: '1.1'
+  image: AgarieltheFinestSushiFairy-RDMAX2-KR-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP039
