--- a/data/rush/17723.yaml
+++ b/data/rush/17723.yaml
@@ -47,7 +47,7 @@ images:
 - index: 1
   image: RecurringNightmare-RDMRP1-JP-ScR.png
   illustration: RecurringNightmare-G002-JP-VG-artwork.png
-- index: '1.1'
+- index: 2
   image: RecurringNightmare-RDS23P-JP-OP.png
 sets:
   ja:
