--- a/data/rush/19283.yaml
+++ b/data/rush/19283.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Machine Type monster from your hand or face-up from your field to the Graveyard.
+    Send 1 Machine Type monster from your hand or 1 face-up Machine Type monster from your field to the Graveyard.
   de:
   es:
   fr:
