--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -38,3 +38,9 @@
 # Quarter Century Duelist Box
 - set_abbreviation: QCDB
   fake_password_range: 100302000
+# Promotion Pack 2024
+- set_abbreviation: 24PR
+  fake_password_range: 100303000
+# Legacy of Destruction
+- set_abbreviation: LEDE
+  fake_password_range: 101204000
