--- a/data/cards/18165869.yaml
+++ b/data/cards/18165869.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Lâmina Sombria Mementotlan
   ja: メメント・ダークソード
   ja_romaji: Memento Dāku Sōdo
   ko: 메멘토 다크 스워드
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode descartar 1 card "Memento" e, depois, escolha 1 Magia/Armadilha que seu oponente controla; destrua-a. Durante sua Fase Principal: você pode destruir 1 monstro "Memento" que você controla e, se isso acontecer, Invoque por Invocação-Especial 1 monstro "Memento" de Nível 3 ou menos do seu Deck. Você só pode usar cada efeito de "Lâmina Sombria Mementotlan" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、手札から「メメント」カード１枚を捨て、相手フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。②：自分メインフェイズに発動できる。自分フィールドの「メメント」モンスター１体を破壊し、デッキからレベル３以下の「メメント」モンスター１体を特殊召喚する。
   ko: |-
