--- a/data/cards/81677154.yaml
+++ b/data/cards/81677154.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Tatsunootoshigo Mementotlan
   ja: メメント・シーホース
   ja_romaji: Memento Shīhōsu
   ko: 메멘토 씨호스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você não controlar nenhum monstro com a face para cima, exceto monstros "Memento": você pode Invocar este card por Invocação-Especial da sua mão. Durante sua Fase Principal: você pode destruir 1 monstro "Memento" que você controla e enviar qualquer número de monstros "Memento" (com nomes diferentes) do seu Deck para o Cemitério, cuja soma dos Níveis seja igual ou menor que o Nível original do monstro destruído. Você só pode usar cada efeito de "Tatsunootoshigo Mementotlan" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「メメント」モンスター以外の表側表示モンスターが存在しない場合に発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。自分フィールドの「メメント」モンスター１体を破壊し、レベルの合計が破壊したモンスターの元々のレベル以下になるように、デッキから「メメント」モンスターを墓地へ送る（同名カードは１枚まで）。
   ko: |-
