--- a/data/cards/00423585.yaml
+++ b/data/cards/00423585.yaml
@@ -346,6 +346,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: DBVS-KR025
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-TW:
   - set_number: SD22-TC021
     set_name: 'Structure Deck: Dragonic Legion'
