--- a/data/cards/22723778.yaml
+++ b/data/cards/22723778.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Clorless, Re del Chaos del Mondo Oscuro
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>混<rt>こん</rt></ruby><ruby>沌<rt>とん</rt></ruby><ruby>王<rt>おう</rt></ruby> カラレス
   ja_romaji: Ankokukai no Konton'ō Kararesu
