--- a/data/cards/54550967.yaml
+++ b/data/cards/54550967.yaml
@@ -70,6 +70,12 @@ sets:
     rarities:
     - Super Rare
     - Quarter Century Secret Rare
+  ko:
+  - set_number: DBVS-KR005
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
