--- a/data/cards/73628505.yaml
+++ b/data/cards/73628505.yaml
@@ -757,6 +757,11 @@ sets:
     - Super Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: DBVS-KR013
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-TW:
   - set_number: SD25-TC024
     set_name: "Structure Deck: The Blue-Eyed Dragon's Thundering Descent"
