--- a/data/cards/78598237.yaml
+++ b/data/cards/78598237.yaml
@@ -72,6 +72,11 @@ sets:
     set_name: 'Deck Build Pack: Valiant Smashers'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBVS-KR038
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
