--- a/data/cards/84339249.yaml
+++ b/data/cards/84339249.yaml
@@ -129,6 +129,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: DBVS-KR041
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP6-SC070
     set_name: Mega Pack 06
