--- a/data/cards/01073952.yaml
+++ b/data/cards/01073952.yaml
@@ -176,6 +176,11 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: DBVS-KR028
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: SD35-SC031
     set_name: 'Structure Deck: Soulburner'
