--- a/data/cards/03048768.yaml
+++ b/data/cards/03048768.yaml
@@ -91,6 +91,13 @@ sets:
     - Common
     - Normal Parallel Rare
     - Secret Rare
+  ko:
+  - set_number: DBVS-KR031
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
