--- a/data/cards/07811875.yaml
+++ b/data/cards/07811875.yaml
@@ -124,6 +124,11 @@ sets:
     set_name: 'Structure Deck R: Dragunity Drive'
     rarities:
     - Common
+  - set_number: DBVS-KR030
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
