--- a/data/cards/15982593.yaml
+++ b/data/cards/15982593.yaml
@@ -83,6 +83,11 @@ sets:
     set_name: 'Deck Build Pack: Valiant Smashers'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBVS-KR019
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
