--- a/data/cards/18165869.yaml
+++ b/data/cards/18165869.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: 'Deck Build Pack: Valiant Smashers'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBVS-KR004
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
