--- a/data/cards/23288411.yaml
+++ b/data/cards/23288411.yaml
@@ -81,6 +81,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DBVS-KR001
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
