--- a/data/cards/24207889.yaml
+++ b/data/cards/24207889.yaml
@@ -207,6 +207,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: DBVS-KR015
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: RC03-SC048
     set_name: Rarity Collection Premium Gold Edition
