--- a/data/cards/30432463.yaml
+++ b/data/cards/30432463.yaml
@@ -86,6 +86,13 @@ sets:
     - Common
     - Normal Parallel Rare
     - Secret Rare
+  ko:
+  - set_number: DBVS-KR032
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
