--- a/data/cards/35817848.yaml
+++ b/data/cards/35817848.yaml
@@ -122,6 +122,11 @@ sets:
     set_name: World Premiere Pack 2021
     rarities:
     - Common
+  - set_number: DBVS-KR029
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
