--- a/data/cards/42493140.yaml
+++ b/data/cards/42493140.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: 'Deck Build Pack: Valiant Smashers'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBVS-KR017
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
