--- a/data/cards/43215738.yaml
+++ b/data/cards/43215738.yaml
@@ -66,6 +66,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: DBVS-KR011
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
