--- a/data/cards/67696066.yaml
+++ b/data/cards/67696066.yaml
@@ -174,6 +174,11 @@ sets:
     set_name: 'Structure Deck: Rebirth of Shaddoll'
     rarities:
     - Common
+  - set_number: DBVS-KR042
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: SD37-SC016
     set_name: 'Structure Deck: Rebirth of Shaddoll'
