--- a/data/cards/76821171.yaml
+++ b/data/cards/76821171.yaml
@@ -73,6 +73,11 @@ sets:
     set_name: 'Deck Build Pack: Valiant Smashers'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBVS-KR033
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
