--- a/data/cards/78888899.yaml
+++ b/data/cards/78888899.yaml
@@ -71,6 +71,13 @@ sets:
     - Common
     - Normal Parallel Rare
     - Secret Rare
+  ko:
+  - set_number: DBVS-KR018
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
