--- a/rush.yaml
+++ b/rush.yaml
@@ -96528,6 +96528,10 @@ sets:
     set_name: Saikyō Jump April 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP045
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
   ko:
   - set_number: RD/EPP1-KR019
     set_name: Express Pack
