--- a/data/cards/34717238.yaml
+++ b/data/cards/34717238.yaml
@@ -4,9 +4,9 @@ name:
   en: Pulling the Rug
   de: Boden unter den Füßen wegziehen
   es: Fastidiar los Planes
-  fr: Couper l'Herbe Sous Le Pied
+  fr: Couper l'Herbe sous le Pied
   it: Tirare il Tappeto
-  pt:
+  pt: Puxando o Tapete
   ja: <ruby>畳<rt>たたみ</rt></ruby><ruby>返<rt>がえ</rt></ruby>し
   ja_romaji: Tatami Gaeshi
   ko: 다다미 뒤집기
@@ -17,13 +17,13 @@ text:
   en: |-
     When a monster effect is activated that activates when a monster is Normal Summoned: Negate the activation, and if you do, destroy that monster.
   de: |-
-    Annulliere die Aktivierung und den Effekt eines Effektmonsters, dessen Effekt aktiviert wurde, als es als Normalbeschwörung beschworen wurde, und zerstöre dieses Monster.
+    Wenn ein Monstereffekt aktiviert wird, der aktiviert wird, wenn ein Monster als Normalbeschwörung beschworen wird: Annulliere die Aktivierung und falls du dies tust, zerstöre jenes Monster.
   es: |-
-    Niega la activación y el efecto de un Monstruo de Efecto cuyo efecto se haya activado al Invocarlo de modo Normal, y destruye ese monstruo.
+    Cuando es activado un efecto de monstruo que se active cuando un monstruo es Invocado de Modo Normal: niega la activación y, si lo haces, destruye ese monstruo.
   fr: |-
-    Annulez l'activation et l'effet d'un Monstre à Effet dont l'effet s'est activé lorsqu'un monstre a été Invoqué Normalement (y compris lui-même) et détruisez ce Monstre à Effet.
+    Lorsqu'un effet de monstre est activé qui s'active lorsqu'un monstre est Invoqué Normalement : annulez l'activation, et si vous le faites, détruisez le monstre.
   it: |-
-    Annulla l'attivazione e l'effetto di un Mostro con Effetto il cui effetto si attiva quando Evocato tramite Evocazione Normale e distruggi quel Mostro con Effetto.
+    Quando viene attivato l'effetto di un mostro che si attiva quando un mostro viene Evocato Normalmente: annulla l'attivazione e, se lo fai, distruggi quel mostro.
   pt: |-
     Quando um efeito de monstro for ativado que ative quando um monstro é Invocado por Invocação-Normal: negue a ativação e, se isso acontecer, destrua esse monstro.
   ja: |-
