--- a/data/cards/02772236.yaml
+++ b/data/cards/02772236.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattquimera
   fr: Électro-Chimère
   it: Wattchimera
-  pt:
+  pt: Wattquimera
   ja: エレキマイラ
   ja_romaji: Erekimaira
   ko: 일렉키메라
@@ -18,17 +18,17 @@ text:
     1 "Watt" Tuner + 1+ non-Tuner Thunder monsters
     This card can attack directly. If this card inflicts battle damage to your opponent by a direct attack: Place 1 random card from your opponent's hand on top of their Deck.
   de: |-
-    1 "Watt"-Empfänger + 1 oder mehr Nicht-Empfänger-Monster vom Typ Donner
-    Diese Karte kann deinen Gegner direkt angreifen. Wenn diese Karte deinem Gegner Kampfschaden durch einen Angriff zufügt, lege 1 zufällige Karte von der Hand deines Gegners auf sein Deck.
+    1 „Watt“-Empfänger + 1+ Donner-Nicht-Empfänger-Monster
+    Diese Karte kann direkt angreifen. Falls diese Karte deinem Gegner Kampfschaden durch einen direkten Angriff zufügt: Lege 1 zufällige Karte von der Hand deines Gegners auf sein Deck.
   es: |-
-    1 Cantante "Watt" + 1 o más monstruos de Tipo Trueno que no sean Cantantes.
-    Esta carta puede atacar a tu adversario directamente. Cuando esta carta inflige daño de batalla a tu adversario con un ataque directo, selecciona 1 carta al azar de la mano de tu adversario y ponla en la parte superior de su Deck.
+    1 Cantante "Watt" + 1+ monstruos Trueno que no sean Cantantes
+    Esta carta puede atacar directamente. Si esta carta inflige daño de batalla a tu adversario con un ataque directo: pon en la parte superior de su Deck 1 carta al azar en la mano de tu adversario.
   fr: |-
-    1 Syntoniseur "Électro" + 1 monstre de Type Tonnerre non Syntoniseur ou plus
-    Cette carte peut attaquer votre adversaire directement. Lorsque cette carte inflige des dommages de combat à votre adversaire par une attaque directe, placez 1 carte au hasard depuis la main de votre adversaire au-dessus de son Deck.
+    1 Syntoniseur "Électro-" + 1+ monstre non-Syntoniseur Tonnerre
+    Cette carte peut attaquer directement. Si cette carte inflige des dommages de combat à votre adversaire par une attaque directe : placez 1 carte au hasard depuis la main de votre adversaire au-dessus de son Deck.
   it: |-
-    1 Tuner "Watt" + 1 o più mostri non-Tuner di Tipo Tuono
-    Questa carta può attaccare il tuo avversario direttamente. Quando questa carta infligge danno da combattimento al tuo avversario con un attacco diretto, metti 1 carta a caso dalla mano del tuo avversario in cima al suo Deck.
+    1 Tuner "Watt" + 1+ mostri non-Tuner Tuono
+    Questa carta può attaccare direttamente. Se questa carta infligge danno da combattimento al tuo avversario con un attacco diretto: metti 1 carta a caso dalla mano del tuo avversario in cima al suo Deck.
   pt: |-
     1 Regulador "Watt" + 1+ monstros Trovão não-Reguladores
     Este card pode atacar diretamente. Se este card causar dano de batalha ao seu oponente em um ataque direto: coloque 1 card aleatório da mão do seu oponente no topo do Deck dele.
@@ -43,8 +43,7 @@ text:
     此卡可直接攻擊對方玩家。此卡以直接攻擊給予對方LP戰鬥傷害時，隨機選擇對方的１張手牌置於牌組的最上方。
   zh-CN: |-
     “电力”协调＋协调以外的雷族怪兽１只以上
-    ①：此卡可直接攻击。
-    ②：此卡以直接攻击给予对手战斗伤害的情况下发动。随机将对手的１张手牌放在牌组最上面。
+    ①：此卡可直接攻击。②：此卡以直接攻击给予对手战斗伤害的情况下发动。随机将对手的１张手牌放在牌组最上面。
 card_type: Monster
 monster_type_line: Thunder / Synchro / Effect
 attribute: LIGHT
