--- a/data/cards/08561192.yaml
+++ b/data/cards/08561192.yaml
@@ -8,7 +8,7 @@ name:
   it: Leo, il Custode dell'Albero Sacro
   pt: Leo, o Protetor da Árvore Sagrada
   ja: <ruby>神<rt>しん</rt></ruby><ruby>樹<rt>じゅ</rt></ruby>の<ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>－<ruby>牙<rt>ガ</rt></ruby><ruby>王<rt>オウ</rt></ruby>
-  ja_romaji: Shinju no Shugojū Gaō
+  ja_romaji: Shinju no Shugojū - Gaō
   ko: 신수의 수호수－아왕
   ko_rr:
   zh-TW:
