--- a/data/rush/yugipedia1023688.yaml
+++ b/data/rush/yugipedia1023688.yaml
@@ -54,6 +54,7 @@ sets:
   - set_number: RD/HC01-JP035
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
