--- a/data/rush/yugipedia1023691.yaml
+++ b/data/rush/yugipedia1023691.yaml
@@ -68,6 +68,7 @@ sets:
   - set_number: RD/HC01-JP038
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
