--- a/rush.yaml
+++ b/rush.yaml
@@ -124758,6 +124758,7 @@ sets:
   - set_number: RD/HC01-JP035
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
@@ -124836,6 +124837,7 @@ sets:
   - set_number: RD/HC01-JP038
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
@@ -124900,6 +124902,7 @@ sets:
   - set_number: RD/HC01-JP037
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
@@ -124964,6 +124967,7 @@ sets:
   - set_number: RD/HC01-JP039
     set_name: High-Grade Collection
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
