--- a/data/rush/15353.yaml
+++ b/data/rush/15353.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Common
+  - set_number: RD/HC01-JP011
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/PR01-KR003
     set_name: Rush Duel Launch Commemorative Pack
