--- a/data/rush/yugipedia1027879.yaml
+++ b/data/rush/yugipedia1027879.yaml
@@ -38,6 +38,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: EngineofDestruction-RDHC01-JP-OP.png
