--- a/data/cards/90711610.yaml
+++ b/data/cards/90711610.yaml
@@ -1,7 +1,7 @@
 konami_id: 19516
 password: 90711610
 name:
-  en: Grand Arrival of the Goblin Riders
+  en: Goblin Biker Grand Entrance
   de:
   es:
   fr:
@@ -15,7 +15,9 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 "Goblin" monster from your Deck to your hand, then you can detach 1 material from a monster on the field, and if you do, Special Summon 1 Level 4 or lower "Goblin" monster from your hand. You can banish this card from your GY; detach 1 material from a monster on the field, then you can add 1 "Goblin" monster from your GY to your hand. You can only use each effect of "Grand Arrival of the Goblin Riders" once per turn.
+    Add 1 "Goblin" monster from your Deck to your hand, then you can apply the following effect.
+    ● Detach 1 Xyz Material from a monster on either field, and if you do, Special Summon 1 Level 4 or lower "Goblin" monster from your hand.
+    You can banish this card from your GY; detach 1 Xyz Material from a monster on either field, then you can add 1 "Goblin" monster from your GY to your hand. You can only use each effect of "Goblin Biker Grand Entrance" once per turn.
   de:
   es:
   fr:
@@ -33,8 +35,48 @@ series:
 - Goblin Rider
 images:
 - index: 1
-  image: GrandArrivaloftheGoblinRiders-PHNI-JP-R.png
+  image: GoblinBikerGrandEntrance-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-ENSP1
+    set_name: Phantom Nightmare Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: PHNI-EN061
+    set_name: Phantom Nightmare
+    rarities:
+  de:
+  - set_number: PHNI-DESP1
+    set_name: Phantom Nightmare Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: PHNI-DE061
+    set_name: Phantom Nightmare
+    rarities:
+  fr:
+  - set_number: PHNI-FRSP1
+    set_name: Phantom Nightmare Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: PHNI-FR061
+    set_name: Phantom Nightmare
+    rarities:
+  it:
+  - set_number: PHNI-ITSP1
+    set_name: Phantom Nightmare Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: PHNI-IT061
+    set_name: Phantom Nightmare
+    rarities:
+  pt:
+  - set_number: PHNI-PTSP1
+    set_name: Phantom Nightmare Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: PHNI-PT061
+    set_name: Phantom Nightmare
+    rarities:
   ja:
   - set_number: PHNI-JP061
     set_name: Phantom Nightmare
@@ -43,9 +85,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1019559
