--- a/data/rush/yugipedia1027880.yaml
+++ b/data/rush/yugipedia1027880.yaml
@@ -20,19 +20,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分または相手がモンスターを召喚・特殊召喚した時、または相手が魔法カードを発動した後に発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Return 1 monster on the field to the owner's hand.
+    Return 1 monster from the field to the owner's hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分または相手フィールドのモンスター１体を選んで持ち主の手札に戻す。
   ko:
   zh-TW:
   zh-CN:
