--- a/data/rush/18956.yaml
+++ b/data/rush/18956.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card's name becomes the same as the name of 1 Level 8 or lower monster in your Graveyard.
+    This card's name becomes the same as the name of 1 Level 8 or lower monster in your Graveyard this turn.
   de:
   es:
   fr:
