--- a/data/rush/yugipedia1027877.yaml
+++ b/data/rush/yugipedia1027877.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで５００アップする。その後、相手フィールドの表側表示モンスター（攻撃力３１００以下）を全て破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「デーモンの召喚」＋「真紅眼の黒竜」
   ko:
   zh-TW:
   zh-CN:
